# bt-studio

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  develop.sh  develop_academy.sh  manage.py  package.json  thirdparty.repos
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: README.md  black.yml  generate_Bt_Studio.yml  generate_Bt_Studio_Database.yml  prettier.yml  release.yml  release_Bt_Studio_manual.yml  test.yml
a/src/components/: DiagramEditor.js  HeaderMenu.js
backend/: db.sqlite3  django_auth.sql  requirements.txt
backend/backend/: asgi.py  settings.py  test_runner.py  urls.py  wsgi.py
backend/database/: db.sql
backend/editor/: apps.py  urls.py  views.py
backend/editor/templates/: index.html
backend/filesystem/: Forward.py  Turn.py  patata
backend/filesystem/TestComp/: config.json
backend/filesystem/TestProject/: config.json
backend/filesystem/composition_demo/: config.json
backend/filesystem/demo/: graph.json
backend/filesystem/follow-line-model-demo/: config.json
backend/filesystem/follow_line_demo/: config.json
backend/filesystem/global_nav/: config.json
backend/filesystem/laser_bump_and_go/: config.json
backend/filesystem/laser_bump_and_go/universes/test_world/: CMakeLists.txt  config.json  gz.config  package.xml
backend/filesystem/laser_bump_and_go/universes/test_world/hooks/: resource_paths.dsv.in  resource_paths.sh
backend/filesystem/laser_bump_and_go/universes/test_world/launch/: universe.launch.py
backend/filesystem/laser_bump_and_go/universes/test_world/worlds/: universe.world
backend/filesystem/library_demo/: config.json
backend/filesystem/minimal/: config.json
backend/filesystem/obstacle_avoidance/: config.json
backend/filesystem/patata/: graph.json
backend/filesystem/pepe/: graph.json
backend/filesystem/prueba/: graph.json
backend/filesystem/px4_uav_control/: config.json
backend/filesystem/recepcionist_demo/: config.json  graph.json
backend/filesystem/receptionist_demo/: config.json
backend/filesystem/test_comp/: config.json
backend/filesystem/visual_follow_person/: config.json  graph.json
backend/filesystem/warehouse_demo/: config.json
backend/ros_template/: package.xml  setup.py  thirdparty.repos
backend/ros_template/ros_template/: execute.py  execute_docker.py
backend/templates/: action  graph.xml  io
backend/templates/universe/: CMakeLists.txt  package.xml
backend/templates/universe/launch/: universe.launch.py
backend/templates/world/: package.xml
backend/tree_api/: app_generator.py  apps.py  error_handler.py  exceptions.py  file_access.py  json_test.json  json_translator.py  models.py  normal.json  project_view.py  reactive.json  serializers.py  templates.py  tests.py  tests_data.py  tree_generator.py  urls.py  views.py
backend/tree_gardener/: package.xml  setup.py
backend/tree_gardener/tree_gardener/: tree_factory.py  tree_tools.py
client_demo/: setup.cfg
client_demo/actions/: Backward.py  CheckObstacle.py  Forward.py  Turn.py
client_demo/client_demo/: demo.py
client_demo/launch/: demo.launch.py
compose_cfg/: dev_humble_cpu.yaml  dev_humble_gpu.yaml  dev_humble_nvidia.yaml  dev_humble_nvidia_windows.yaml  user_humble_cpu.yaml  user_humble_gpu.yaml  user_humble_nvidia.yaml  user_humble_nvidia_windows.yaml
doc/: .gitignore  README.md  _config.yml
doc/_pages/: about.md  home.md  references.md
docs/_data/: navigation.yml
docs/_includes/: footer.html  social-share.html
docs/_pages/: about.md  documentation.md  home.md  install.md  remote.md
documentation/: README.md
documentation/ROSconESP-2024/: main.tex
documentation/slides/: bt-studio.aux  bt-studio.tex  makefile  t-gsyc-6.sty
examples/offline_execution/: package.xml  setup.cfg  setup.py
examples/offline_execution/actions/: CheckObstacle.py  Forward.py  Turn.py
examples/offline_execution/launch/: execute_tree.launch.py
examples/offline_execution/offline_execution/: execute_tree.py  parse_xml.py
examples/offline_usage/: usage.md
examples/offline_usage/actions/: CheckObstacle.py  Forward.py  Turn.py
examples/offline_usage/scripts/: execute_tree.py  parse_xml.py  self_contained_tree.xml
examples/offline_usage/steps/: parse_xml.py  (+1 more)
examples/py_gardener_demo/: package.xml  setup.py
frontend/: checksum.txt  cypress.config.ts  eslint.config.mts  package.json  svg.d.ts  tsconfig.json  urls.py  views.py  webpack-stats.json  webpack.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  App.tsx  index.css  index.js  index.tsx  routes.ts
modules/tree_gardener/: LICENSE.txt  README.md  pyproject.toml
offline_executor/: package.xml  setup.cfg  setup.py
offline_executor/actions/: CheckObstacle.py  Turn.py
offline_executor/offline_executor/: execute.py  parse_xml.py
offline_executor/resource/: basic_tree.xml  final_tree.xml
py_gardener/: package.xml  setup.cfg  setup.py
py_gardener/py_gardener/: gn_factory.py  gn_parser.py  gn_tools.py  hal.py
py_gardener_demo/: package.xml  setup.cfg  setup.py
py_gardener_demo/actions/: CheckObstacle.py  Forward.py
py_gardener_demo/launch/: demo.launch.py
py_gardener_demo/py_gardener_demo/: demo.py
py_gardener_demo/resource/: bumpgo_ports.xml  tree.xml
scripts/: develop.sh  move_frontend.sh  run.sh
scripts/BTDI/: Dockerfile.database  Dockerfile.dependencies_humble  Dockerfile.humble  Dockerfile.mini_humble  README.md  build.sh  config-nvidia-libs.py  install-ompl-ubuntu.sh
translator/: factory.py
tree-translator/: README.md  pyproject.toml
tree_gardener/: setup.cfg
tree_gardener/tree_gardener/: tree_factory.py
tree_generator/: generate_tree.py  self_contained_tree.xml  test.xml  tree.xml
tree_generator/actions/: CheckObstacle.py  Forward.py
tree_translator/: generate_app.py  generate_tree.py
tree_translator/actions/: Forward.py
tree_translator/ros_template/: package.xml  setup.cfg  setup.py
tree_translator/ros_template/ros_template/: execute.py
tree_translator/trees/: generated_tree.xml  self_contained_tree.xml
treelib/: README.md  pyproject.toml
(+509 files in other folders)
