<?xml version="1.0"?>
<package format="3">
  <name>py_gardener</name>
  <version>0.0.0</version>
  <description>Grow BT.cpp xml trees in py_trees</description>
  <maintainer email="oscar.robotics@tutanota.com">Óscar Martínez</maintainer>
  <license>GPLv3</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
