<?xml version="1.0"?>
<package format="3">
  <name>tree_gardener</name>
  <version>0.2.0</version>
  <description>BT execution engine for BT Studio</description>
  <maintainer email="oscar.robotics@tutanota.com">Óscar Martínez</maintainer>
  <license>GPLv3</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-autopep8</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>