<?xml version="1.0"?>
<package format="3">
  <name>ros_template</name>
  <version>0.1.0</version>
  <description>A ROS2 app generated with tree_translator</description>
  <maintainer email="mantainer@mail.com">Mantainer</maintainer>
  <license>GPLv3</license>

  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>